eunit de parser1 y lexer1

--- a/trunk/eunit/test_parser1.html
+++ b/trunk/eunit/test_parser1.html
@@ -1,12 +1,10 @@
-<!-- hola  {#
-	{{}}
-	{%%} #}
+<!-- hola 
+	{# #}
 	-->
 <html>
-	{#<body bg color="bl{{ue}}">#}
-		{%  "hola1" + 'hola2' / "ho
-		la3" = "ho\nla4"%} 
-		{#{{"ho'la"}}#}
+	<body bg color="bl{{ue}}">
+		{# {%  "hola1" %} #} 
+		{{'hola2'}}
 	</body>
 </html>
 
