=El servidor soporta solicitudes con metodos post y get de lo contrario ocurre un error 405. El cliente tambien recibe el request como parametro para las pruebas

--- a/trunk/servidor/pagina405.html
+++ b/trunk/servidor/pagina405.html
@@ -23,6 +23,7 @@ Allow: GET, POST
   </head>
   <body>
     <h1>405 Method Not Allowed</h1>
+	El metodo especificado en la linea de peticion no esta permitido para el recurso identificado por la solicitud. 
 	~s
   </body>
 </html>
