--- a/trunk/resources/forma.html
+++ b/trunk/resources/forma.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form name="input" method="POST">
+<form name="input" method="POST" action="forma/eval">
 Username: 
 <input type="text" name="user">
 <input type="submit" value="Submit">
